styling some things

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <section id="app">
-  <div class="movie-wrapper">
+  <!-- <div class="movie-wrapper">
     <aside>
       <h4 class="movie-title">{{ defaultMovie.movies_title }}</h4>
       <span class="movie-year">
@@ -11,7 +11,7 @@
     <video autoplay controls>
       <source src="video/{{ defaultMovie.movies_trailer }}" type="video/mp4">
     </video>
-  </div>
+  </div> -->
 
   <!-- load in all of the thumnails for each genre -->
   <section class="genre-lists" v-for="genre in genres">
