--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,7 +2,7 @@
 
 body {
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-	background-color: black;
+	background-color: #141414;
 	color: white;
 }
 
@@ -18,29 +18,8 @@ header {
 	z-index: 500;
 	width: 100%;
 
-	span {
-		margin-left: 12px;
-		font-weight: bolder;
-		font-size: 1.5em;
-		text-transform: uppercase;
-		position: relative;
-		top: -4px;
-	}
 }
 
-video { width: 100%; }
-
-.movie-wrapper { 
-	position: relative; padding-top: 52px;
-
-	aside {
-		position: absolute;
-		left: 1em;
-		top: 51px;
-		padding: 2em;
-		background-color: rgba(0, 0, 0, 0.8);
-	}
-}
 
 .movie-title { font-size: 1.7em; }
 .movie-year, .movie-time { font-size: 1.5em; }
@@ -62,15 +41,15 @@ video { width: 100%; }
   list-style-type: none;
 }
 
-.genre-lists { 
+.genre-lists {
 	padding: 0 14px; overflow: hidden;
 
-	> div { 
-		position: relative; 
-		transition: all .5s; 
+	> div {
+		position: relative;
+		transition: all .5s;
 		white-space: nowrap;
 		overflow-x: auto;
-		overflow-y: hidden; 
+		overflow-y: hidden;
 	}
 }
 
@@ -78,36 +57,34 @@ video { width: 100%; }
 
 .movie-list { display: inline-block; margin-right: 1.25em; }
 
-nav {
-	ul {
-		position: absolute;
-		right: 3em;
-		top: 1.2em;
-		list-style-type: none;
-
-		li {
-			display: inline-block;
-			font-size: 1.25em;
-			padding: 0 0.2em;
-			cursor: pointer;
-		}
-	}
-} 
-
-footer {
-	padding: 2em 1em;
-	clear: both;
 
 
-	ul { 
-		list-style-type: none;
 
-		li {
-			font-size: 2.5em;
-			display: inline-block;
-			margin-right: 0.4em;
-			color: rgba(255, 255, 255, 0.3);
-			margin-top: 0.4em;
-		}
-	}
+.TrailerPage{
+margin-top: 150px;
+.Trailers{
+  border: 1px solid white;
+  padding: 5px;
+  width: 600px;
+  margin-top: 60px;
+  margin-right: 20px;
+  margin-bottom: 50px;
+  float: left;
+}
+}
+
+.title{
+    margin-bottom: 40px;
+    font-size: 44px;
+    color: #a52b25;
+    font-style: italic;
+}
+.VidInfo{
+  margin-top: 17px;
+  float: right;
+  width: 328px;
+  overflow: hidden;
+  h3{
+    font-style: italic;
+  }
 }
