--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,11 +1,73 @@
 * { border: 0; padding: 0; margin: 0; }
 
-body {
-	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-	background-color: #141414;
-	color: white;
+.body{
+  background-color: #141414;
+  font-family: Helvetica, Arial, sans-serif;
+
+  h1{
+    color: white;
+    margin-top: 50px;
+    text-align: center;
+    color: #a52b25;
+  }
+  h6{
+    color: white;
+    margin-top: 50px;
+    text-align: left;
+  }
+  p{
+    color: white;
+  }
+  width: 960px;
+  margin: 0 auto;
+
+  .dropbtn {
+    background-color: #141414;
+    border: solid white 1px;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    transition: 0.2s
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+    border:  solid white 1px;
+    // margin-left: 50px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    min-width: 160px;
+    opacity: 0.8;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #1c1c1c;
+}
+}
 a {
 	color: #00B7FF;
 	text-decoration: none;
@@ -56,35 +118,3 @@ header {
 .genre-item { display: inline-block; }
 
 .movie-list { display: inline-block; margin-right: 1.25em; }
-
-
-
-
-.TrailerPage{
-margin-top: 150px;
-.Trailers{
-  border: 1px solid white;
-  padding: 5px;
-  width: 600px;
-  margin-top: 60px;
-  margin-right: 20px;
-  margin-bottom: 50px;
-  float: left;
-}
-}
-
-.title{
-    margin-bottom: 40px;
-    font-size: 44px;
-    color: #a52b25;
-    font-style: italic;
-}
-.VidInfo{
-  margin-top: 17px;
-  float: right;
-  width: 328px;
-  overflow: hidden;
-  h3{
-    font-style: italic;
-  }
-}
