--- a/sass/_video.scss
+++ b/sass/_video.scss
@@ -1,11 +1,11 @@
-.comments { 
-	width: 45%; display: inline-block;
-
-	 > div {
-		padding: 0 1em;
-		margin-bottom: 1.75em;
-	}
-}
+// .comments {
+// 	width: 45%; display: inline-block;
+//
+// 	 > div {
+// 		padding: 0 1em;
+// 		margin-bottom: 1.75em;
+// 	}
+// }
 
 #movie > video { margin-bottom: 1.5em; }
 
@@ -25,7 +25,7 @@
   padding: 3px;
   vertical-align: middle;
   line-height: 1;
-  font-size: 2.25em;
+  font-size: 1.25em;
   color: #ABABAB;
   -webkit-transition: color .2s ease-out;
   transition: color .2s ease-out;
@@ -41,9 +41,9 @@
 }
 
 .add-comment {
-	// float: right; 
-	width: 45%; 
-	display: inline-block; 
+	// float: right;
+	width: 45%;
+	display: inline-block;
 	padding-left: 1.5em;
 
 	label:not(.star-rating-star) {
@@ -53,49 +53,86 @@
 	    top: -5px;
 	}
 
-	input[type=range] {
-		margin: 1em 0;
-	}
-
-	input[type=submit] {
-		padding: 0.7em 1em;
-		border-radius: 8px;
-		background-color: orange;
-		color: white;
-		font-weight: bold;
-		font-size: 1.25em;
-		margin-top: 1em;
-	}
-
-	textarea {
-		display: block;
-		width: 90%;
-		height: 130px;
-		padding: 0.75em;
-		line-height: 1.5;
-		border-radius: 8px;
-	}
 
 	.star-rating { margin: 4px 0 10px 0; }
 }
 
-.floatRight { 
-	float : right; 
-}
-
-.review-heading { font-size: 1.5em; }
 
 .hidden { display: none; }
 
 .back-button {
     position: absolute;
     top: 90px;
-    left: 12px;
+    left: 50px;
     z-index: 500;
     color: white;
     font-size: 3em;
 }
 
-.simplebar-scrollbar:before {
-    background: white;
+// .simplebar-scrollbar:before {
+//     background: white;
+// }
+
+.TrailerPage{
+margin-top: 150px;
+width: 600px;
+margin: 0 auto;
+.Trailers{
+  border: 1px solid white;
+  padding: 5px;
+  width: 600px;
+  margin-top: 60px;
+  margin-right: 20px;
+  margin-bottom: 50px;
+  float: left;
+}
+}
+
+.title{
+    margin-bottom: 40px;
+    font-size: 44px;
+    color: #a52b25;
+    font-style: italic;
+}
+.VidInfo{
+  margin-top: 17px;
+  float: right;
+  width: 328px;
+  overflow: hidden;
+  h3{
+    font-style: italic;
+  }
+}
+
+.media{
+  .fb img{
+    height: 30px;
+    width: 18px;
+  }
+  width: 135px;
+  // margin: 0 auto;
+  img{
+		float: left;
+    width: 30px;
+    margin-right: 15px;
+    transition: 0.2s;
+    &:hover{
+      opacity: 0.4;
+    }
+  }
+
+}
+
+.comments{
+	width: 300px;
+	float: left;
+	.commentSection{
+		margin-bottom: 25px;
+		border: 0.5px solid white;
+		opacity: 0.8;
+		padding: 15px;
+		.stars{
+			margin-bottom: 10px;
+		}
+	}
 }
