--- a/views/moviepage.handlebars
+++ b/views/moviepage.handlebars
@@ -1,3 +1,10 @@
+<social-sharing url="https://vuejs.org/"
+title="The Progressive JavaScript Framework"
+description="Intuitive, Fast and Composable MVVM for building interactive interfaces."
+quote="Vue is a progressive framework for building user interfaces."
+hashtags="vuejs,javascript,framework"
+twitter-user="vuejs"
+inline-template>
 <section id="video">
   <!-- back button here -->
   <div class="TrailerPage">
@@ -6,7 +13,7 @@
   </a>
   <br>
   <br>
-  <video class="Trailers" autoplay controls>
+  <video class="Trailers" controls>
     <source src="/video/{{ moviesrc }}" type="video/mp4">
   </video>
 
@@ -20,6 +27,13 @@
   <a class="fb" href="#"><img src="/images/fb_logo.png" alt=""></a>
   <a href="#"><img src="/images/in_logo.png" alt=""></a>
   <a href="#"><img src="/images/t_logo.png" alt=""></a>
+  <social-sharing url="https://vuejs.org/" inline-template>
+    <div>
+      <network network="facebook">
+        <i class="fa fa-fw fa-facebook"></i> Facebook
+      </network>
+    </div>
+</social-sharing>
 </div>
 <!-- <br>
 <br> -->
@@ -40,7 +54,7 @@
     <span class="hidden movId">{{ movie }}</span>
     <review-stars v-model="numStars" :disabled="false"></review-stars>
     <textarea name="review" id="review" placeholder="What did you think?" v-model="review"></textarea>
-    <input type="submit" value="Submit your review!" v-on:click="addReview">
+    <input type="submit" value="SUBMIT" v-on:click="addReview">
   </aside>
 </div>
 </section>
